samples/_failures_safe/1761350709_cad66d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_791ff3f2.c: In function ‘main’:
./samples/SAFE/__tmp_791ff3f2.c:150:13: error: expected expression at end of input
  150 |             mat1.cols =
      |             ^~~~
./samples/SAFE/__tmp_791ff3f2.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_791ff3f2.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_791ff3f2.c:150:13: error: expected declaration or statement at end of input
